[gd_scene load_steps=7 format=3 uid="uid://cicd4ud557rhx"]

[ext_resource type="Script" path="res://scripts/game_level.gd" id="1_8doh3"]
[ext_resource type="PackedScene" uid="uid://u6xvppqiu8k0" path="res://scenes/terrain.tscn" id="1_jy4de"]
[ext_resource type="Script" path="res://scripts/wave_manager.gd" id="3_k04oc"]
[ext_resource type="PackedScene" uid="uid://ue45x42eanqf" path="res://scenes/wave_spot.tscn" id="3_s5ygj"]
[ext_resource type="PackedScene" uid="uid://c4psrm47wqwgk" path="res://scenes/interface.tscn" id="5_ci5ew"]
[ext_resource type="Script" path="res://scripts/SpawnPlayer.gd" id="5_kf223"]

[node name="Game_Level" type="Node2D"]
script = ExtResource("1_8doh3")

[node name="Terrain" parent="." instance=ExtResource("1_jy4de")]

[node name="WaveManager" type="Node2D" parent="."]
position = Vector2(2, 0)
script = ExtResource("3_k04oc")

[node name="WaveDuration" type="Timer" parent="WaveManager"]

[node name="WaveSpot" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(1243, 23)

[node name="WaveSpot2" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(1245, 308)

[node name="WaveSpot3" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(956, 429)

[node name="WaveSpot4" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(949, 91)

[node name="WaveSpot5" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(668, 57)

[node name="WaveSpot6" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(692, 344)

[node name="WaveSpot7" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(417, 434)

[node name="WaveSpot8" parent="WaveManager" instance=ExtResource("3_s5ygj")]
position = Vector2(18, 423)

[node name="Time_To_Spawn_Enemy" type="Timer" parent="WaveManager"]

[node name="Current_Time_Wave" type="Timer" parent="WaveManager"]
autostart = true

[node name="Interface" parent="." node_paths=PackedStringArray("wave_manager") instance=ExtResource("5_ci5ew")]
wave_manager = NodePath("../WaveManager")

[node name="SpawnPlayer" type="Node2D" parent="."]
position = Vector2(319, 144)
script = ExtResource("5_kf223")

[node name="Marker2D" type="Marker2D" parent="SpawnPlayer"]

[connection signal="timeout" from="WaveManager/WaveDuration" to="WaveManager" method="_on_wave_duration_timeout"]
[connection signal="timeout" from="WaveManager/Time_To_Spawn_Enemy" to="WaveManager" method="_on_time_to_spawn_enemy_timeout"]
[connection signal="timeout" from="WaveManager/Current_Time_Wave" to="WaveManager" method="_on_current_time_wave_timeout"]
